[tool.poetry]
name = "cnt_composite"
version = "0.1.0"
description = "prediction cnt effect"
authors = ["zailushang-aoh"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
zipp = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
